# OpenOps

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  vision.md
docs/adr/: 0001-language-and-packaging.md  0002-monorepo.md  0003-cli-first.md
docs/architecture/: diagnosis-model.md  evidence-model.md  overview.md  state-model.md  tool-contract.md
docs/architecture/security/: security-boundary.md  threat-model.md
docs/contributing/: local-development.md
docs/demonstrations/: broken-readiness-trace.json  broken-readiness.md
docs/planning/: deferred.md
docs/product/: acceptance.md  charter.md  intake.md  non-goal.md  non-goals.md  phase-2-verification.md  report.md
docs/scenarios/: broken-readiness.md
docs/user/: quick-start.md
scenarios/broken-readiness/: README.md  manage.py  namespace.yaml  rbac.yaml  workload-fault.yaml  workload-healthy.yaml
scripts/: check_secrets.py
src/openops/: __init__.py  __main__.py  cli.py  decision.py  intake.py  kubernetes_adapter.py  models.py  normalizer.py  report.py  runtime.py  trace.py
tests/: __init__.py  helpers.py  test_cli.py  test_decision_provider.py  test_intake.py  test_kubernetes_adapter.py  test_live_cluster.py  test_live_model.py  test_models.py  test_normalizer.py  test_package.py  test_runtime.py  test_security_boundary.py
tests/fixtures/broken_readiness/: deployment.json  events.json  pods.json
